--- a/popup.html
+++ b/popup.html
@@ -5,51 +5,61 @@
   <meta charset="UTF-8">
   <style>
     body {
-      width: 300px;
-      padding: 15px;
-      font-family: Arial, sans-serif;
-      background: white;
-      color: black;
+      width: 320px;
+      padding: 20px;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      background: #fcfcfd;
+      color: #2d3436;
     }
 
     input,
     select {
       width: 100%;
-      padding: 8px;
+      padding: 10px;
       margin: 5px 0 15px 0;
       box-sizing: border-box;
-      border: 1px solid black;
+      border: 1px solid #dfe6e9;
       background: white;
-      color: black;
+      color: #2d3436;
+      border-radius: 6px;
       outline: none;
+      font-size: 14px;
+      transition: border 0.2s;
     }
 
     input:focus,
     select:focus {
-      border-width: 2px;
+      border-color: #6c5ce7;
     }
 
     button {
       width: 100%;
-      padding: 10px;
-      background: white;
-      color: black;
-      border: 1px solid black;
+      padding: 12px;
+      background: #2d3436;
+      color: white;
+      border: none;
       cursor: pointer;
       font-size: 14px;
-      font-weight: bold;
-      transition: background 0.2s;
+      font-weight: 600;
+      border-radius: 8px;
+      transition: all 0.2s;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
 
     button:hover {
-      background: #f0f0f0;
+      background: #444;
+      transform: translateY(-1px);
+      box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
     }
 
     label {
-      font-weight: bold;
+      font-weight: 600;
       font-size: 12px;
+      color: #636e72;
       display: block;
-      margin-bottom: 5px;
+      margin-bottom: 6px;
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
     }
 
     h3 {
