feat: Add configurable hotkey support for OCR capture and make the floating action button draggable.

--- a/popup.html
+++ b/popup.html
@@ -101,6 +101,13 @@
     <label for="showFab" style="margin: 0; cursor: pointer;">Hiện nút nổi (Quick Button)</label>
   </div>
 
+  <label>Phím tắt (Hotkey Mode):</label>
+  <select id="hotkeyMode">
+    <option value="disabled">Tắt (Disabled)</option>
+    <option value="alt_q">Alt + Q (Mặc định)</option>
+    <option value="q">Phím Q (Nhanh)</option>
+  </select>
+
   <button id="startBtn">Bắt đầu chụp</button>
 
   <script src="popup.js"></script>
