fix: Prevent duplicate content script execution to ensure stable behavior.

--- a/popup.html
+++ b/popup.html
@@ -101,6 +101,12 @@
     <label for="showFab" style="margin: 0; cursor: pointer;">Hiện nút nổi (Quick Button)</label>
   </div>
 
+  <label>Chế độ dịch (Mode):</label>
+  <select id="translationMode">
+    <option value="vocabulary">Từ vựng khó (Vocabulary)</option>
+    <option value="full">Dịch toàn bộ (Full Text)</option>
+  </select>
+
   <label>Phím tắt (Hotkey Mode):</label>
   <select id="hotkeyMode">
     <option value="disabled">Tắt (Disabled)</option>
